--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       font-weight:900;
       font-size:clamp(22px, 4.5vw, 34px);
       letter-spacing:.3px;
-      margin: 0;
+      margin: 0 0 4px;
       padding: 0;
       line-height: 1.05;
       color:#111;
