--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       font-weight:900;
       font-size:clamp(22px, 4.5vw, 34px);
       letter-spacing:.3px;
-      margin: 0 0 5px;
+      margin: 0;
       padding: 0;
       line-height: 1.05;
       color:#111;
@@ -268,7 +268,8 @@
 
   <!-- 2 widok: LABIRYNT -->
   <div class="mazeWrap hidden" id="mazeGate" role="dialog" aria-label="Labirynt weryfikacyjny">
-    <div class="mazeTitle">Etap 2: Znajdź drogę do żony</div>
+    <div class="mazeTitle">Etap 2: przejdź labiryntem do mnie 😄</div>
+    <div class="mazeSub">Kliknij <b>Start</b>, potem dojedź myszką do zdjęcia. Nie dotykaj ścian.</div>
 
     <canvas id="maze" width="360" height="360"></canvas>
 
@@ -631,6 +632,7 @@
   <script async src="https://tenor.com/embed.js"></script>
 </body>
 </html>
+
 
 
 
